--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
+  box-sizing: border-box;
 }
 
 @media (prefers-color-scheme: light) {
